@@ -18,7 +18,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_REVISION($Revision: 1.146.2.4 $)
+AC_REVISION($Revision: 1.146.2.5 $)
 AC_INIT([GNU Backgammon],[0.15],[bug-gnubg@gnu.org],[gnubg])
 AC_CONFIG_SRCDIR(gnubg.c)
 AM_INIT_AUTOMAKE
@@ -47,6 +47,7 @@ AC_CHECK_PROG(PNMTOPS, pnmtops, pnmtops)
 AC_CHECK_PROG(PSTOPNM, pstopnm, pstopnm)
 AC_CHECK_PROG(SRCONV, srconv, srconv, true)
 AC_CHECK_PROG(TR, tr, tr)
+AC_DISABLE_SHARED
 AC_PROG_LIBTOOL
 
 AM_YFLAGS='-d'
